상단진행중

--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="css/index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Buy Our Shoes!</h1>
+      <p class="headerlor">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rerum a sint, voluptas nesciunt quas pariatur voluptates, officiis inventore iste accusantium rem veniam quam ducimus non ut maiores, provident id?</p>
+      <div class="bt">
+        <p class="buy">구매하기</p>
+      </div>
+    </header>
+    <div class="topbox">
+        <div><h2>How we design our shoes</h2></div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam est natus iure totam. Laboriosam, facere error iure distinctio quis eos laborum alias tempora quisquam praesentium aliquid quibusdam ipsa sapiente quo!</p>
+    </div>
+    <div class="bottombox"></div>
+  </body>
 </html>
