--- a/index.html
+++ b/index.html
@@ -7,17 +7,53 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <header>
-      <h1>Buy Our Shoes!</h1>
-      <p class="headerlor">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam rerum a sint, voluptas nesciunt quas pariatur voluptates, officiis inventore iste accusantium rem veniam quam ducimus non ut maiores, provident id?</p>
-      <div class="bt">
-        <p class="buy">구매하기</p>
-      </div>
-    </header>
-    <div class="topbox">
-        <div><h2>How we design our shoes</h2></div>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam est natus iure totam. Laboriosam, facere error iure distinctio quis eos laborum alias tempora quisquam praesentium aliquid quibusdam ipsa sapiente quo!</p>
+    <!--메인 배경-->
+    <div class="main_bg">
+      <!--메인 타이틀-->
+      <h1 class="main-title">Buy Our Shoes!</h1>
+      <!--메인 컨텐트-->
+      <p class="main-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint velit nisi explicabo tempora!</p>
+      <!--메인 버튼-->
+      <button class="main-button">구매하기</button>
     </div>
-    <div class="bottombox"></div>
+    <!--설명 박스-->
+    <div class="explain-box">
+      <h2>How we design our shoes</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit iure vitae quod nulla nisi quae sint eos temporibus, at repellendus, aperiam voluptatibus. Dolor voluptates non fuga quos provident temporibus.</p>
+    </div>
+    <div class="explain-box">
+      <h2>How we design our shoes</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam velit iure vitae quod nulla nisi quae sint eos temporibus, at repellendus, aperiam voluptatibus. Dolor voluptates non fuga quos provident temporibus.</p>
+    </div>
+    <!-- form box -->
+    <div class="form-bg">
+      <form class="form-white">
+        <h3>Contact Us</h3>
+        <div class="w-100">
+          <label for="email">Your Email</label>
+          <input type="email" class="form-input" name="email" id="email"/>
+        </div>
+        <div class="w-50">
+          <label for="first-name">first-name</label>
+          <input type="text" class="form-input" name=" first-name" id="first-name" />
+        </div>
+        <div class="w-50">
+          <label for="last-name">last-name</label>
+          <input type="text" class="form-input" name="last-name " id="last-name" />
+        </div>
+        <div class="w-100">
+          <label for="message">Message</label>
+          <textarea name="message" id="message" class="form-input"></textarea>
+        </div>
+        <div>
+          <label for="sub">Subscribe</label>
+          <input type="checkbox" name="sub" id="sub" />
+          <button class="send-bt">SEND</button>
+        </div>
+      </form>
+    </div>
+  </body>
+</html>
+
   </body>
 </html>
